[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/visual/SideBar.gd" type="Script" id=1]

[node name="SideBar" type="Control"]
anchor_bottom = 1.0
margin_right = 124.0
margin_bottom = -122.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_right = 124.0
color = Color( 0.145098, 0.145098, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBox"]
margin_right = 124.0
margin_bottom = 20.0
text = "Save"

[node name="Button2" type="Button" parent="VBox"]
margin_top = 24.0
margin_right = 124.0
margin_bottom = 44.0
text = "Load"

[node name="Button3" type="Button" parent="VBox"]
margin_top = 48.0
margin_right = 124.0
margin_bottom = 68.0
text = "Test limits"

[node name="Button4" type="Button" parent="VBox"]
margin_top = 72.0
margin_right = 124.0
margin_bottom = 92.0
text = "Add random"

[node name="HSeparator3" type="HSeparator" parent="VBox"]
margin_top = 96.0
margin_right = 124.0
margin_bottom = 100.0

[node name="Label2" type="Label" parent="VBox"]
margin_top = 104.0
margin_right = 124.0
margin_bottom = 118.0
text = "Action"

[node name="ActionList" type="ItemList" parent="VBox"]
margin_top = 122.0
margin_right = 124.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 58 )
items = [ "Select", null, false, "Add jar", null, false, "Put down", null, false ]

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_top = 184.0
margin_right = 124.0
margin_bottom = 188.0

[node name="Label" type="Label" parent="VBox"]
margin_top = 192.0
margin_right = 124.0
margin_bottom = 206.0
text = "Jar format"

[node name="JarFormatList" type="ItemList" parent="VBox"]
margin_top = 210.0
margin_right = 124.0
margin_bottom = 268.0
rect_min_size = Vector2( 0, 58 )
items = [ "BigJar", null, false, "MediumJar", null, false, "SmallJar", null, false, "SpiceJar", null, false, "Bottle", null, false ]

[node name="HSeparator2" type="HSeparator" parent="VBox"]
margin_top = 272.0
margin_right = 124.0
margin_bottom = 276.0

[node name="ObjIdLabel" type="Label" parent="VBox"]
margin_top = 280.0
margin_right = 124.0
margin_bottom = 294.0
text = "Selected:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grabbed" type="Label" parent="VBox"]
margin_top = 298.0
margin_right = 124.0
margin_bottom = 312.0
text = "Grabbed:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="VBox/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="VBox/Button2" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="VBox/Button3" to="." method="_on_Button3_button_up"]
[connection signal="button_up" from="VBox/Button4" to="." method="_on_Button4_button_up"]
[connection signal="item_selected" from="VBox/ActionList" to="." method="_on_ActionList_item_selected"]
[connection signal="item_selected" from="VBox/JarFormatList" to="." method="_on_ItemList_item_selected"]
